--- a/package.json
+++ b/package.json
@@ -8,26 +8,37 @@
     "postinstall": "npm run build",
     "build": "webpack --config webpack/webpack.prod.config.js",
     "clean": "rm -rf build",
-    "lint": "eslint src --ext .js*",
+    "lint": "tslint {src,test}/**/*.{ts,tsx}",
     "test": "jest"
   },
   "author": "Michał Załęcki <michal@michalzalecki.com>",
   "license": "MIT",
   "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "^.+\\.spec\\.(js|ts)x?$",
     "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ],
     "moduleNameMapper": {
       "\\.css$": "identity-obj-proxy"
     },
     "setupFiles": [
-      "<rootDir>/test/setup.js"
+      "<rootDir>/test/setup.ts"
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.2",
+    "@types/enzyme": "^3.1.13",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/jest": "^23.3.2",
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.7",
+    "awesome-typescript-loader": "^5.2.1",
     "compression": "^1.7.3",
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
@@ -40,21 +51,16 @@
     "react-dom": "^16.5.0",
     "react-hot-loader": "^4.3.6",
     "style-loader": "^0.23.0",
+    "typescript": "^3.0.3",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0"
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^9.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "eslint": "^5.5.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
     "jest": "^23.6.0",
+    "ts-jest": "^23.1.4",
+    "tslint": "^5.11.0",
     "webpack-dashboard": "^2.0.0",
     "webpack-dev-middleware": "^3.3.0",
     "webpack-dev-server": "^3.1.8",
